# rocketlane-assist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  OBSERVABILITY.md  README.md  TODOs.txt  docker-compose.dev.yml  docker-compose.yml  package-lock.json  quickstart.sh  run.sh
.devcontainer/: README.md  devcontainer.json
backend/: .env.example  .gitignore  CLAUDE.md  entrypoint.sh  pyproject.toml  test_otel.py
backend/app/: CLAUDE.md  main.py
backend/app/api/: CLAUDE.md  __init__.py  dependencies.py
backend/app/api/routes/: config.py  integrations.py  projects.py  statistics.py  tasks.py  test.py  timesheets.py  users.py
backend/app/core/: CLAUDE.md  cache.py  config.py  config_manager.py  logging.py  otel_config.py  telemetry.py
backend/app/core/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  provider.py
backend/app/models/: google_calendar.py
backend/app/prompts/: CLAUDE.md  __init__.py
backend/app/prompts/templates/: task_summarization.py
backend/app/services/: CLAUDE.md  google_calendar.py  project_cache.py  project_cache_v2.py  rocketlane.py  summarization.py  tasks_cache.py  tasks_cache_v2.py  time_entries_cache.py  time_entry_categories_cache.py  user_cache.py  user_statistics_cache.py
backend/tests/: test_api.py
frontend/: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  CLAUDE.md  Dockerfile  SOURCEMAP_UPLOAD.md  index.html  nginx.conf  package-lock.json  package.json  upload-sourcemaps.sh  vite.config.ts
frontend/src/: App.css  App.tsx  CLAUDE.md  index.css
frontend/src/components/: AudioRecorder.css  AudioRecorder.tsx  CLAUDE.md  OnboardingWizard.tsx  TimeEntryReview.css  TimeEntryReview.tsx
frontend/src/hooks/: useProjects.ts
frontend/src/lib/: observability.ts
frontend/src/pages/: CLAUDE.md  Home.css  Home.tsx  ProjectDetail.tsx  ProjectList.tsx  Settings.tsx  Timesheets.css  Timesheets.tsx
frontend/src/services/: CLAUDE.md  api.ts  apiClient.ts
frontend/src/stores/: configStore.ts
frontend/src/utils/: debounce.ts
